   netmasks. Old-style netmasks are still supported. So for the 18.26.7
   subnet, you can write either `18.26.7.0 255.255.255.0' or
   `18.26.7.0/24'.

** Fixed kernel alignment bug in IP header checking elements: can't use
   Linux's `fast_ip_csum' on unaligned data.

** Added QuitWatcher, FrontDropQueue, and StripIPHeader.

** Fixed FromLinux bug: now supports multiple instances of FromLinux for same
   device (this happens while installing a new configuration: initialize is
   called on the new FromLinux before the last FromLinux instance is
   uninitialized).

** Fixed ToLinux: now calls ptype_dispatch inside start_bh_atomic() and
   end_bh_atomic().

** Modified ToDevice: ToDevice now sends linux packets if device is idle. This
   prevents click from starving out packets sent by other processes / linux.

** Radio elements are not compiled by default.

** Added new `elements/local' directory for your own elements. They are not
   compiled by default.

** Added new `tickets' handler, available by default.

* Tools

** Fixed click-uncombine bugs and changed its order of arguments.


Version 1.0.6   6.May.2000

* Kernel driver

** Fixed kernel Packet::expensive_push. Patch by Richard Mortier
   <rmm1002@cam.ac.uk>.

** Added /proc/click/version.

* Elements

** Replace UDPEncap with UDPIPEncap. New element adds both IP and UDP
   headers, and fixes several bugs in UDPEncap. Thanks to Richard Mortier
   <Richard.Mortier@cl.cam.ac.uk>.

* Miscellaneous

** Fixed findelements.sh: Ethernet switch elements were not being included.


Version 1.0.5   1.May.2000

* Kernel and user-level drivers

** You can hot-swap install Click configurations in the Linux kernel
   module. In a hot-swap install, packets stored in the old configuration
   will not be lost. (The new configuration's Queues must have the same
   names as the old configuration's Queues.) See the click.o(8) man page
   (under /proc/click/hotconfig) and the click-install(1) man page for more
   information.
