@@ -1,9 +1,9 @@
 /*
- * setipaddress.{cc,hh} -- element sets IP destination to value of
- * destination address annotation
- * Robert Morris
+ * setipaddress.{cc,hh} -- element sets destination address annotation
+ * to a particular IP address
+ * Eddie Kohler
  *
- * Copyright (c) 1999-2000 Massachusetts Institute of Technology.
+ * Copyright (c) 2000 Massachusetts Institute of Technology.
  *
  * This software is being provided by the copyright holders under the GNU
  * General Public License, either version 2 or, at your discretion, any later
@@ -27,17 +27,14 @@ int
 SetIPAddress::configure(const String &conf, ErrorHandler *errh)
 {
   return cp_va_parse(conf, this, errh,
-		     cpUnsigned, "byte offset of IP address", &_offset,
+		     cpIPAddress, "IP address", &_ip,
 		     0);
 }
 
 Packet *
 SetIPAddress::simple_action(Packet *p)
 {
-  IPAddress ipa = p->dst_ip_anno();
-  if (ipa && _offset + 4 <= p->length())
-    memcpy(p->data() + _offset, &ipa, 4);
-  // XXX error reporting?
+  p->set_dst_ip_anno(_ip);
   return p;
 }
 
