@@ -28,6 +28,9 @@ Version 1.0.7
 
 ** Added QuitWatcher, FrontDropQueue, and StripIPHeader.
 
+** Renamed the SetIPAddress element to StoreIPAddress. Added a different
+   SetIPAddress element.
+
 ** Fixed FromLinux bug: now supports multiple instances of FromLinux for same
    device (this happens while installing a new configuration: initialize is
    called on the new FromLinux before the last FromLinux instance is
